[gd_scene load_steps=6 format=3 uid="uid://ceqnfbjjsvp0t"]

[ext_resource type="Script" path="res://addons/escoria-ui-simplemouse/inventory/inventory_ui.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://6jrvo85ueiox" path="res://addons/escoria-ui-simplemouse/images/inventory_bg.png" id="2"]
[ext_resource type="Script" path="res://addons/escoria-core/ui_library/inventory/esc_inventory_container.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://db1jdf5nf8s8g" path="res://addons/escoria-ui-simplemouse/images/frame.png" id="5"]
[ext_resource type="Texture2D" uid="uid://c8o6ikw2au2k8" path="res://addons/escoria-ui-simplemouse/images/inventory_icon.png" id="6"]

[node name="inventory_ui" type="Control"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 3
anchor_right = 0.4
anchor_bottom = 0.4
offset_right = 768.0
offset_bottom = 540.0
scale = Vector2(0.4, 0.4)
size_flags_horizontal = 0
size_flags_vertical = 3
script = ExtResource("1")
inventory_ui_container = NodePath("FloatingInventory/panel/MarginContainer/ScrollContainer/container")

[node name="inventory_button" type="TextureButton" parent="."]
layout_mode = 2
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("6")
ignore_texture_size = true
stretch_mode = 0

[node name="frame" type="TextureRect" parent="inventory_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("5")
expand_mode = 1

[node name="FloatingInventory" type="CanvasLayer" parent="."]

[node name="panel" type="TextureRect" parent="FloatingInventory"]
custom_minimum_size = Vector2(0, 160)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -516.0
offset_top = -160.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("2")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="FloatingInventory/panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="FloatingInventory/panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
mouse_filter = 2

[node name="container" type="HBoxContainer" parent="FloatingInventory/panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 20
script = ExtResource("3")

[connection signal="pressed" from="inventory_button" to="." method="_on_inventory_button_pressed"]
